--- a/public/index.html
+++ b/public/index.html
@@ -1,14 +1,12 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <meta charset="UTF-8"/>
+  </head>
 
-<head>
-  <meta charset="UTF-8"/>
-</head>
+  <body>
+    <div class="container"></div>
+  </body>
 
-<body>
-  <div id="app"></div>
-  
   <script src="bundle.js"></script>
-</body>
-
 </html>
